@@ -1,11 +1,12 @@
 
-$Id: changes.txt,v 1.58 2006/03/10 18:48:06 vvd0 Exp $
+$Id: changes.txt,v 1.59 2006/03/13 11:27:04 vvd0 Exp $
 
 ----
 MVDSV v0.19.11-CVS build 22?? (2006.03.??)
 - for developers: move all common tools functions from common.{c|h} and qwdtools/tools.{c|h}
   to bothtools.c and bothdefs.h
 [server]
+- no more ".gz" strings in sources - used sv_demoRegexp
 - bugfix from 0.19.10-develop: didn't close files not from paks (by disconnect)
 - removed cvar registered (by disconnect)
 - new code in determination of demo existing for easyrecord command
